--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^16.13.1",
     "react-highlight-words": "^0.16.0",
     "react-reveal": "^1.2.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "string-similarity": "^4.0.1"
   },
   "scripts": {
